--- a/authentification/Template/first.html
+++ b/authentification/Template/first.html
@@ -29,7 +29,7 @@
     height: 100%;
     border-radius: 50%;
     position: absolute;
-    background: rgba(128, 0, 128, 0.7); /* Couleur violet */
+    background:rgb(126, 34, 206, 0.7);
     animation: bounce 1.2s infinite ease-in-out;
 }
 
