--- a/authentification/Template/index.html
+++ b/authentification/Template/index.html
@@ -75,7 +75,7 @@
     height: 100%;
     border-radius: 50%;
     position: absolute;
-    background:rgb(126, 34, 206);
+    background:rgb(126, 34, 206, 0.7);
     animation: bounce 1.2s infinite ease-in-out;
 }
 
