--- a/authentification/Template/ancienlogin.html
+++ b/authentification/Template/ancienlogin.html
@@ -324,9 +324,6 @@
         .output-section {
   display: none !important;
 }
-#show-register-employeur,#showCoordinates,#exportCoordinates {
-  display: none;
-}
 
         
     </style>
@@ -359,14 +356,14 @@
         aria-label="Inscription Travailleur"
         title="Inscription Travailleur">
         <i class="fas fa-user-tie fa-2x mb-2"></i>
-        <span class="text-sm font-medium">sign up</span>
+        <span class="text-sm font-medium">Je suis un Travailleur</span>
     </button>
 
     <!-- Inscription Employeur -->
     <button id="show-register-employeur"
         class="w-48 flex flex-col items-center px-4 py-3 rounded-md bg-accent-green text-dark-accent shadow hover:bg-accent-green-darker focus:outline-none focus:ring-2 focus:ring-accent-green-light focus:ring-opacity-50 transition"
         aria-label="Inscription Employeur"
-        title="Inscription Employeur" h>
+        title="Inscription Employeur">
         <i class="fas fa-briefcase fa-2x mb-2"></i>
         <span class="text-sm font-medium">Je suis un Employeur</span>
     </button>
@@ -377,7 +374,6 @@
         aria-label="Connexion"
         title="Connexion">
         <i class="fas fa-sign-in-alt fa-2x mb-2"></i>
-        
         <span class="text-sm font-medium">Se connecter</span>
     </button>
 
