--- a/authentification/Template/index.html
+++ b/authentification/Template/index.html
@@ -468,8 +468,8 @@
     <label for="reg-travailleur-description" class="block text-sm font-medium text-gray-700">Description du profil</label>
     <textarea id="reg-travailleur-description" name="description_profil" rows="4" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm sm:text-sm"></textarea>
   </div>
- <div class="controls"><label for="reg-travailleur-description" class="block text-sm font-medium text-gray-700">votre zone de travaille de preferance</label>
-        <button id="drawPolygon">🖊️ Dessiner </button>
+ <div class="controls"><label for="reg-travailleur-description" class="block text-sm font-medium text-gray-700">votre zone d'activiter</label>
+        <button id="drawPolygon">🖊️ Dessiner  </button>
         <button id="editPolygon" disabled>✏️ Modifier </button>
         <button id="clearPolygon" disabled>🗑️ Effacer </button>
         <button id="showCoordinates"></button>
