--- a/authentification/Template/mainpage.html
+++ b/authentification/Template/mainpage.html
@@ -674,7 +674,7 @@
             <!-- Map Section -->
             <div id="map-section" class="p-4 hidden">
                 <div class="mb-6">
-                    <h2 class="text-2xl font-bold text-gray-900">Carte des Emplois</h2>
+                    <h2 class="text-2xl font-bold text-gray-900">Carte des les plus  Emplois</h2>
                     <p class="text-gray-600 text-sm">Trouvez des opportunités près de chez vous</p>
                 </div>
                 <div id="map" class="map-container"></div>
