--- a/authentification/Template/mainpage.html
+++ b/authentification/Template/mainpage.html
@@ -1082,9 +1082,9 @@ function getAuthToken() {
             }
 
             // URL de base de votre API Django Ninja
-            const API_BASE_URL = 'http://127.0.0.1:8000/auth';
+           // const API_BASE_URL = 'http://127.0.0.1:8000/auth';
             // Ou si déployé sur Render :
-            // const API_BASE_URL = 'https://gwork.onrender.com/auth';
+             const API_BASE_URL = 'https://gwork.onrender.com/auth';
 
             try {
                 const token=getAuthToken()
